[package]
name = "rust-grapher"
version = "0.1.0"
edition = "2021"
description = "Generate mermaid dependency graphs for Rust projects"

[dependencies]
cargo_metadata = "0.23"
petgraph = "0.8"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
quote = "1"
